--- a/rca/static_src/sass/components/_staff-overview.scss
+++ b/rca/static_src/sass/components/_staff-overview.scss
@@ -1,5 +1,26 @@
 .staff-overview {
+    $root: &;
+    grid-template-rows: auto auto auto;
+    padding-top: ($gutter * 4); // Might need adjusting for notches
+    padding-bottom: ($gutter * 4);
+
+    &--single {
+
+        #{$root}__view-all {
+            grid-column: 3 / span 1;
+        }
+
+    }
+
+    &__heading {
+        grid-row: 1;
+        grid-column: 2 / span 4;
+        margin-bottom: ($gutter * 2);
+    }
+
     &__view-all {
+        grid-row: 3;
+        grid-column: 4 / span 1;
         max-width: 130px;
     }
 }
