--- a/rca/static_src/sass/components/_staff-detail.scss
+++ b/rca/static_src/sass/components/_staff-detail.scss
@@ -34,18 +34,45 @@
 
     .staff-overview & {
         grid-row: 2;
-        grid-column: 2 / span 1;
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+            padding-right: ($gutter * 2.5);
+        }
+
+        @include media-query(large) {
+            grid-column: 2 / span 1;
+            padding-right: 0;
+        }
 
         &:nth-of-type(2n) {
-            grid-column: 4 / span 1;
+            grid-row: 3;
+
+            @include media-query(medium) {
+                grid-column: 2 / span 1;
+                grid-row: 2;
+            }
+
+            @include media-query(large) {
+                grid-column: 4 / span 1;
+            }
+
         }
     }
 
     .staff-overview--single & {
-        grid-column: 2 / span 2;
+
+        @include media-query(large) {
+            grid-column: 2 / span 2;
+        }
 
         #{$root}__image {
-            margin-bottom: ($gutter * 1.5);
+
+            @include media-query(large) {
+                margin-bottom: ($gutter * 1.5);
+            }
+
         }
 
         #{$root}__content {
