--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -100,9 +100,39 @@
         padding: $gutter 0;
         color: $color--white;
 
-        &:hover {
-            cursor: pointer;
+        span {
+            pointer-events: none;
         }
+
+        @include media-query(large) {
+            span {
+                position: relative;
+
+                &::after {
+                    content: '';
+                    display: block;
+                    height: 2px;
+                    left: 0;
+                    position: absolute;
+                    background: currentColor;
+                    transition: width $transition, left $transition;
+                    width: 0;
+                    bottom: -2px;
+                }
+            }
+
+            &:hover,
+            &:focus,
+            &.is-active {
+                span {
+                    &::after {
+                        width: 100%;
+                        left: 0;
+                    }
+                }
+            }
+        }
+
 
         @include media-query(medium) {
             font-size: map-get($large-font-sizes, xs);
