--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -7,14 +7,23 @@
         left: 0;
         right: 0;
         bottom: 0;
-        max-width: $site-width;
         pointer-events: none;
 
         > div {
             position: relative;
             display: none;
-            // border-right: 1px solid $color--grid-line-light;
+            height: 100vh;
             padding-right: 4.28%;
+
+            @include media-query(medium) {
+                padding-right: 1.85%;
+            }
+
+            // Show all for large
+            @include media-query(large) {
+                display: block;
+                padding-right: 1.81%;
+            }
 
             &::before {
                 content: '';
@@ -36,30 +45,60 @@
                 mix-blend-mode: screen;
             }
 
+            // Only show first and last until large breakpoint
             &:last-child,
             &:first-child {
                 display: block;
             }
 
+            // First item is only one to have a grid line on left side
             &:first-child {
-                border-left: 1px solid $color--grid-line-light;
-            }
 
-            @include media-query(medium) {
-                padding-right: 1.85%;
-            }
+                div {
 
-            @include media-query(large) {
-                display: block;
-                padding-right: 1.81%;
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        width: 1px;
+                        height: 100%;
+                        background-color: $color--grid-line-dark;
+                        mix-blend-mode: multiply;
 
-                &:first-child {
-                    border-left: 0;
+
+                        @include media-query(large) {
+                            content: none;
+                        }
+                    }
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        width: 1px;
+                        height: 100%;
+                        background-color: $color--grid-line-light;
+                        mix-blend-mode: screen;
+
+                        @include media-query(large) {
+                            content: none;
+                        }
+                    }
                 }
 
-                &:last-child {
-                    border-right: 0;
+            }
+
+            &:last-child {
+
+                &::before,
+                &::after {
+
+                    @include media-query(large) {
+                        content: none;
+                    }
+
                 }
+
             }
         }
     }
