Sorting out line heights

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -45,10 +45,8 @@ $weight--normal: 400;
 $weight--light: 200;
 
 // Line heights
-$line-height-large: 140%;
-$line-height-medium: 122%;
-$line-height-small: 120%;
-$base-line-height: 120%;
+$line-height-large: 122%;
+$base-line-height: 20px;
 
 // Font sizes
 $base-font-size: 18px;
