--- a/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
@@ -53,7 +53,7 @@
 
                 <div class="section__row">
                     <h3 class="heading heading--four">Architecture gallery</h3>
-                    {% include "patterns/organisms/slideshow/slideshow.html" with modifier="bg bg--dark" %}
+                    {% include "patterns/organisms/slideshow/slideshow.html" %}
                 </div>
 
             </div>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="section__row">
-                    {% include "patterns/organisms/slideshow/slideshow.html" with modifier="bg bg--light" %}
+                    {% include "patterns/organisms/slideshow/slideshow.html"%}
                 </div>
 
                 <div class="section__row grid featured-alumni">
