--- a/rca/static_src/sass/components/_back-link.scss
+++ b/rca/static_src/sass/components/_back-link.scss
@@ -3,11 +3,17 @@
     opacity: 0;
     align-items: center;
     color: $color--white;
-    margin-top: ($gutter * 3.25);
+    margin-top: ($gutter * 2.5);
     transition: opacity $transition;
     display: flex;
+    pointer-events: none;
+
+    @include media-query(medium) {
+        margin-top: ($gutter * 3.25);
+    }
 
     &.is-visible {
+        pointer-events: all;
         opacity: 1;
     }
 
