--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -102,9 +102,30 @@
         height: 900px;
         padding-top: ($gutter * 2);
 
-        &--menu-container {
-            position: relative;
+        &--container {
             padding-top: 0;
+
+            @include media-query(medium) {
+                position: relative;
+            }
+        }
+
+        &--menu-container {
+            position: absolute;
+            left: $gutter;
+            width: calc(100% - (#{$gutter} * 2));
+            margin-top: ($gutter * 3.75);
+
+            @include media-query(medium) {
+                left: unset;
+                width: 100%;
+                margin-top: ($gutter * 2.25);
+            }
+
+            @include media-query(large) {
+                position: static;
+                margin-top: 0;
+            }
         }
 
         &--drawer {
@@ -115,11 +136,14 @@
             left: 0;
             bottom: 0;
             display: none;
-            padding-top: ($gutter * 4.25);
-            margin-top: $menu-toggle-buttons-height;
+            padding-top: 0;
+
+            @include media-query(medium) {
+                padding-top: ($gutter * 2);
+            }
 
             @include media-query(large) {
-                padding-top: ($gutter * 6.25);
+                padding-top: ($gutter * 9.5);
             }
 
             .menu-active & {
@@ -130,7 +154,15 @@
         &--level-one {
             @include z-index(nav);
             position: relative;
-            padding-top: ($gutter * 6.25);
+            padding-top: 0;
+
+            @include media-query(medium) {
+                padding-top: ($gutter * 2);
+            }
+
+            @include media-query(large) {
+                padding-top: ($gutter * 6.25);
+            }
         }
 
         &--level-two {
