--- a/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
@@ -52,7 +52,9 @@
                 </div>
 
                 <div class="section__row">
-                    <h3 class="heading heading--four">Architecture gallery</h3>
+                    <header class="section__header grid">
+                        <h3 class="section__heading heading heading--four">Architecture gallery</h3>
+                    </header>
                     {% include "patterns/organisms/slideshow/slideshow.html" %}
                 </div>
 
