Dark version of programme page

--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -23,7 +23,7 @@
     }
 
     &__menu-toggle {
-        margin-top: ($grid / 4);
+        margin-top: 2px;
         margin-left: auto;
         cursor: pointer;
 
