--- a/rca/project_styleguide/templates/patterns/organisms/footer/footer.html
+++ b/rca/project_styleguide/templates/patterns/organisms/footer/footer.html
@@ -10,9 +10,9 @@
                 {% include 'patterns/atoms/logo/logo.html' %}
             </div>
 
-            <div class="footer__action">
+            <nav class="footer__action" role="navigation" aria-label="Tertiary">
                 {% footernav %}
-            </div>
+            </nav>
 
         </div>
 
