--- a/rca/static_src/sass/layout/_footer.scss
+++ b/rca/static_src/sass/layout/_footer.scss
@@ -47,6 +47,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
         width: 100%;
         grid-column-start: 1;
         grid-column-end: 3;
