add standout nav

--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -105,6 +105,8 @@
         left: 0;
         right: 0;
         bottom: 0;
+        overflow-y: scroll;
+        overflow-x: hidden;
 
         .nav-open & {
             pointer-events: all;
