--- a/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
+++ b/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
@@ -1,13 +1,12 @@
 <div class="cookie" data-cookie-message>
     <div class="cookie__container">
-        <div class="cookie__message">
-            <p>We use cookies to provide you with a better service. Carry on browsing if you're happy with this, or <a class="cookie__link" href="/cookie-policy">find out more</a></p>
+        <div class="cookie__message body body--two">
+            <p>We use cookies to help give you the best experience on our website. By continuing without changing your cookie settings, we assume you agree to this. Please read our <a class="cookie__link link link--dark-bg link--tertiary link--anchor" href="/cookie-policy"><span class="link__label">privacy policy</span><svg width="12" height="8" class="link__icon link__icon--rotated"><use xlink:href="#arrow"></use></svg></a> to find out more.</p>
         </div>
-        <div class="cookie__action">
-            <a aria-label="Close" href="#" class="cookie__btn" data-cookie-dismiss>
-                <svg class="cookie__btn-icon" width="24" height="24">
-                    <use xlink:href="#close" />
-                </svg>
+        <div class="cookie__action body body--two">
+            <a aria-label="Close" href="#" class="link link--tertiary link--top-line link--dark-bg cookie__btn" data-cookie-dismiss>
+                <span class="link__label">Dismiss</span>
+                <svg width="12" height="8" class="link__icon link__icon--down"><use xlink:href="#arrow"></use></svg>
             </a>
         </div>
     </div>
