--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -107,7 +107,8 @@ $z-index: (
     nav-overlay: 70,
     nav: 80,
     gridlines: 90,
-    modal: 100,
+    cookie-message: 100,
+    modal: 110,
 );
 
 // --------------------------------- Grid Dimensions --------------------------------------
