Key details and pathways

--- a/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary.html
@@ -1,4 +1,4 @@
-<a href="{{ value.href }}" class="body body--two link link--tertiary link--anchor">
+<a href="{{ value.href }}" class="body body--two link link--tertiary link--has-icon link--anchor">
     <span class="link__label">{{ value.text }}</span>
     <svg width="12" height="8" class="link__icon link__icon--rotated"><use xlink:href="#arrow"></use></svg>
 </a>
