--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -9,21 +9,27 @@
         }
     }
 
-    &__row {
-        // Holder for notch work
-    }
-
-    &__container {
-        // Holder for notch work
-    }
-
     &__heading {
         grid-column: 1;
-        margin-bottom: ($gutter * 1.25);
 
         @include media-query(large) {
-            grid-column: 2 / span 3;
-            margin-bottom: ($gutter * 1.5);
+            grid-column: 2 / span 2;
+        }
+
+        &--primary {
+            margin-bottom: ($gutter * 2);
+
+            @include media-query(large) {
+                margin-bottom: ($gutter * 3.5);
+            }
+        }
+
+        &--secondary {
+            margin-bottom: ($gutter * 1.25);
+
+            @include media-query(large) {
+                margin-bottom: ($gutter * 1.5);
+            }
         }
     }
 }
