--- a/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
+++ b/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
@@ -4,7 +4,7 @@
             <p>We use cookies to help give you the best experience on our website. By continuing without changing your cookie settings, we assume you agree to this. Please read our <a class="cookie__link link link--dark-bg link--tertiary link--anchor" href="/cookie-policy"><span class="link__label">privacy policy</span><svg width="12" height="8" class="link__icon link__icon--rotated"><use xlink:href="#arrow"></use></svg></a> to find out more.</p>
         </div>
         <div class="cookie__action body body--two">
-            <a aria-label="Close" href="#" class="link link--tertiary link--top-line link--dark-bg cookie__btn" data-cookie-dismiss>
+            <a aria-label="Close" href="#" class="link link--tertiary link--has-icon link--top-line link--dark-bg cookie__btn" data-cookie-dismiss>
                 <span class="link__label">Dismiss</span>
                 <svg width="12" height="8" class="link__icon link__icon--down"><use xlink:href="#arrow"></use></svg>
             </a>
