--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -1,5 +1,12 @@
 .introduction {
+    line-height: $line-height-large;
+
     .page__header & {
         @include font-size(l);
     }
+
+    .section__row & {
+        @include font-size(s);
+    }
+
 }
