--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -33,10 +33,14 @@
 @import 'components/hero';
 @import 'components/icon';
 @import 'components/introduction';
+@import 'components/key-details';
 @import 'components/link';
 @import 'components/logo';
 @import 'components/nav';
 @import 'components/page';
+@import 'components/pathways';
+@import 'components/pathway-item';
+@import 'components/programme-overview';
 @import 'components/responsive-object';
 @import 'components/rich-text';
 @import 'components/search';
