New components for links modifiers

--- a/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-primary/link-primary--link.html
@@ -1,4 +1,4 @@
-<a href="{{ value.href }}" class="link link--tertiary">
+<a class="link link--primary link--link" href="{{value.href}}">
     <span class="link__label">{{ value.text }}</span>
     <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
 </a>
