--- a/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--down.html
+++ b/rca/project_styleguide/templates/patterns/atoms/link-tertiary/link-tertiary--down.html
@@ -1,4 +1,4 @@
-<a href="{{ value.href }}" class="link link--tertiary">
+<a href="{{ value.href }}" class="link link--tertiary link--down">
     <span class="link__label">{{ value.text }}</span>
     <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
 </a>
