--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -14,9 +14,9 @@
         <ul class="key-details__list">
             <li class="key-details__list-item">25th June 2019</li>
             <li class="key-details__list-item">
-                <a class="key-details__list-item-link link link--tertiary link--has-icon link--top-line link--dark-bg" href="#">
+                <a class="key-details__list-item-link link link--secondary link--link" href="#">
                     <span class="link__label">Book or view all open days</span>
-                    <svg width="12" height="8" class="link__icon link__icon--rotated"><use xlink:href="#arrow"></use></svg>
+                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
                 </a>
             </li>
         </ul>
@@ -37,9 +37,9 @@
         </ul>
     </div>
     <div class="key-details__section key-details__section--action">
-        <a class="key-details__link link link--tertiary link--top-line link--dark-bg link--has-icon link--download" href="#">
+        <a class="key-details__link link link--secondary link--download" href="#">
             <span class="link__label">Download the full Archictecture MA programme specification</span>
-            <svg width="8" height="12" class="link__icon link__icon--download"><use xlink:href="#download"></use></svg>
+            <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
         </a>
     </div>
 </div>
