Tweaking top position of icon in tertiary link

--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -73,7 +73,7 @@
         }
 
         #{$root}__icon {
-            top: 0.15em;
+            top: 0.35em; // em to adapt to font size
         }
 
     }
