Staff link refactor

--- a/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.html
+++ b/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.html
@@ -9,9 +9,9 @@
         </div>
         <div class="staff-detail__more">
             <p class="staff-detail__body body body--two">{{ body }}</p>
-            <a href="{{ link }}" class="body body--two link link--tertiary link--anchor staff-detail__link">
+            <a href="{{ link }}" class="staff-detail__link body body--two link link--tertiary link--link">
                 <span class="link__label">Read more</span>
-                <svg width="12" height="8" class="link__icon link__icon--rotated"><use xlink:href="#arrow"></use></svg>
+                <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
         </div>
     </div>
