--- a/rca/project_styleguide/templates/patterns/organisms/staff-overview/staff-overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/staff-overview/staff-overview.html
@@ -2,8 +2,8 @@
     <h2 class="heading heading--four staff-overview__heading">Staff</h2>
     {% include "patterns/molecules/staff-detail/staff-detail.html" %}
     {% include "patterns/molecules/staff-detail/staff-detail.html" %}
-    <a class="staff-overview__view-all link link--primary body body--two" href="#">
+    <a class="staff-overview__view-all link link--primary link--link body body--two" href="#">
         <span class="link__label">See all programme staff</span>
-        <svg class="link__icon link__icon--rotated" width="12" height="8"><use xlink:href="#arrow"></use></svg>
+        <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
     </a>
 </div>
