refactor menu logic

--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -148,7 +148,7 @@
             }
 
             @include media-query(large) {
-                padding-top: ($gutter * 9.5);
+                padding-top: 0;
             }
 
             .menu-active & {
