--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -25,6 +25,7 @@
 @import 'components/cookie-message';
 @import 'components/card';
 @import 'components/carousel';
+@import 'components/facilities';
 @import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
