--- a/rca/project_styleguide/templates/patterns/molecules/slide/slide.html
+++ b/rca/project_styleguide/templates/patterns/molecules/slide/slide.html
@@ -3,15 +3,17 @@
     {% image slide.image fill-829x585 class="slide__image" %}
     <div class="slide__meta">
         <h2 class="slide__heading">{{ slide.title }}</h2>
-        <div class="slide__author-info">
-            {% if slide.link %}
-                <a class="slide__link" href="{{ slide.link }}">
-            {% endif %}
-                <h3 class="slide__author">{{ slide.author }}</h3>
-            {% if slide.link %}
-                </a>
-            {% endif %}
-            <p class="slide__author-course">{{ slide.course }}</p>
-        </div>
+        {% if slide.author %}
+            <div class="slide__author-info">
+                {% if slide.link %}
+                    <a class="slide__link" href="{{ slide.link }}">
+                {% endif %}
+                    <h3 class="slide__author">{{ slide.author }}</h3>
+                {% if slide.link %}
+                    </a>
+                {% endif %}
+                <p class="slide__author-course">{{ slide.course }}</p>
+            </div>
+        {% endif %}
     </div>
 </div>
