--- a/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programme-detail/programme-detail.html
@@ -74,7 +74,7 @@
                 {% include "patterns/organisms/facilities/facilities.html" %}
 
                 <div class="section__row grid featured-alumni">
-                    <h2 class="heading heading--four featured-alumni__heading">Facilities</h2>
+                    <h2 class="heading heading--four featured-alumni__heading">Notable Alumni</h2>
                     <div class="featured-alumni__introduction">
                         <p class="introduction">Alumni from the RCA form an international network of creative individuals who have shaped and continue to shape the culture surrounding all of us.</p>
                     </div>
