--- a/rca/static_src/sass/components/_facilities.scss
+++ b/rca/static_src/sass/components/_facilities.scss
@@ -1,6 +1,12 @@
 .facilities {
 
     &__heading {
+        grid-column: 1 / span 2;
+        margin-bottom: ($grid * 1.5);
+
+        @include media-query(medium) {
+            margin-bottom: ($grid * 2.5);
+        }
 
         @include media-query(large) {
             grid-column: 2 / span 1;
@@ -8,12 +14,59 @@
 
     }
 
+    &__introduction {
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+            grid-row: 2;
+        }
+
+        @include media-query(large) {
+            grid-column: 3 / span 1;
+            grid-row: auto;
+        }
+
+    }
+
+    &__action {
+        grid-column: 1 / span 2;
+        grid-row: 4;
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+            grid-row: 3;
+        }
+
+        @include media-query(large) {
+            grid-column: 3 / span 1;
+            grid-row: auto;
+        }
+
+    }
+
     &__body {
         @include font-size(xxs);
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            grid-column: 2 / span 1;
+            grid-row: 2;
+        }
+
+        @include media-query(large) {
+            grid-column: 4 / span 1;
+            grid-row: 1;
+        }
     }
 
     &__slideshow {
-        padding-top: ($gutter * 4.5);
+        padding-top: ($gutter * 2);
+
+        @include media-query(medium) {
+            padding-top: ($gutter * 4.5);
+        }
+
     }
 
     &__view-all {
