--- a/rca/static_src/sass/components/_slideshow.scss
+++ b/rca/static_src/sass/components/_slideshow.scss
@@ -12,6 +12,12 @@
             }
         }
 
+        #{$root}__scrollbar {
+            @include media-query(medium) {
+                margin-top: 0;
+            }
+        }
+
     }
 
     &__liveregion {
@@ -86,7 +92,7 @@
         background-color: $color--scrollbar-lightbg-bg; // overriden by theme
 
         @include media-query(medium) {
-            margin-top: 0;
+            margin-top: ($gutter * 2);
         }
 
         @include media-query(large) {
