--- a/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
+++ b/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
@@ -2,6 +2,10 @@
     <h2 class="facilities__heading heading heading--four">{{ title }}</h2>
     <div class="facilities__introduction">
         <p class="introduction">{{ introduction }}</p>
+        <a href="{{ link }}" class="facilities__view-all facilities__view-all--medium body body--one link link--primary link--link">
+            <span class="link__label">{{ link_text }}</span>
+            <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+        </a>
     </div>
     <div class="facilities__action">
         <a href="{{ link }}" class="facilities__view-all body body--one link link--primary link--link">
