fixes after rebase

--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -161,6 +161,10 @@
 
             .search-active & {
                 position: static;
+
+                @include media-query(large) {
+                    position: relative;
+                }
             }
 
             @include media-query(medium) {
