code review changes

--- a/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
@@ -18,7 +18,7 @@
         </a>
     </div>
 
-    <span class="header__inner--menu-container">
+    <span class="header__inner header__inner--menu-container">
 
         <!-- Level 1 -->
         <div class="header__inner header__inner--level-one" data-nav-level-1>
