--- a/rca/static_src/sass/components/_search-toggle.scss
+++ b/rca/static_src/sass/components/_search-toggle.scss
@@ -14,7 +14,7 @@
     }
 
     .app__navigation & {
-        margin-top: $grid * 5.75;
+        margin-top: ($grid * 5.75);
         display: flex;
 
         @include media-query(medium) {
